# mvox

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  mvox.cpp  mvox.h
.github/workflows/: README.md  c-cpp.yml  docs.yml  documentation.yml  guix.yml
app/: mvox.cpp
config/: config.h.in
docs/source/: conf.py  index.md
docs/source/examples/: boxmesh.md  brain-tensors.md
examples/: boxmesh.sh  brain-tensors.sh  dti.sh  labelmap.nrrd
guix/: .guix-channel  README.md
include/: mvox.hpp
include/mvox/: error.hpp  fileutil.hpp  mfemutil.hpp
scripts/: capture_screenshots.py
src/: fileutil.cpp  mfemutil.cpp
